--- a/package.json
+++ b/package.json
@@ -16,12 +16,12 @@
   "contributes": {
     "commands": [
       {
-        "command": "extension.requestCodeFromGPT",
-        "title": "Poisoned GPT로 코드 추천 요청"
+        "command": "extension.startAutoSuggestMode",
+        "title": "Poisoned GPT 자동 추천 모드 시작"
       },
       {
-        "command": "extension.insertSuggestedCode",
-        "title": "Poisoned GPT 추천 코드 삽입"
+        "command": "extension.stopAutoSuggestMode",
+        "title": "Poisoned GPT 자동 추천 모드 종료"
       }
     ],
     "keybindings": [
